# qiqiaoban

./: README.md  pubspec.yaml
.cargo/: config.toml
android/: build.gradle.kts  settings.gradle.kts
docs/: technical_research.md
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
integration_test/: simple_test.dart
ios/: qiqiaoban.podspec
ios/Classes/: QiqiaobanPlugin.swift
lib/: qiqiaoban.dart  qiqiaoban_method_channel.dart  qiqiaoban_platform_interface.dart
lib/src/: qb_bundle_config.dart  qb_bundle_manager.dart  qb_component_widget.dart  (+7 more)
linux/: CMakeLists.txt  qiqiaoban_plugin.cc  qiqiaoban_plugin_private.h
macos/: qiqiaoban.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: bench_tests.rs  compiler_api.rs  component_api.rs  error_api.rs  js_engine.rs  layout_api.rs  mod.rs  poc_render.rs  simple.rs  vnode_api.rs
rust/src/compiler/: ast.rs  codegen.rs  mod.rs  parser.rs  token.rs  tokenizer.rs  transform.rs
rust/src/engine/: context.rs  error.rs  mod.rs  runtime.rs  sandbox.rs
rust/src/layout/: mod.rs  style.rs  tree.rs
rust/src/vnode/: component_runtime.rs  diff.rs  event.rs  event_runtime.rs  layout_bridge.rs  mod.rs  node.rs  patch.rs  reactive_runtime.rs
rust_builder/: pubspec.yaml
test/: qiqiaoban_method_channel_test.dart  qiqiaoban_test.dart
windows/: CMakeLists.txt  qiqiaoban_plugin.cpp  qiqiaoban_plugin.h  qiqiaoban_plugin_c_api.cpp
(+72 files in other folders)
